<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a Button</string>
    <string name="login_text">Login</string>
    <string name="password_text">Password</string>
    <string name="radio_button">Radio Button</string>
    <string name="checkbox">Checkbox</string>
    <string name="what_do">What does this do?</string>
    <string name="StartChat">Start Chat</string>
    <string name="send_button">Send</string>
</resources>
