<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:rowCount="2"
    android:columnCount="2"
    tools:context=".ListItemsActivity">

    <RadioButton android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/radio_button"/>
    <CheckBox android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/checkbox"/>
    <Switch android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/what_do"/>

    <ImageButton android:src="@android:drawable/ic_menu_camera"
        android:layout_columnWeight="1"
        android:gravity="fill"/>

</GridLayout>